Add image to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
   </style>
 </head>
 <body>
+  <p>
+  <img src="https://assets-jiocdn.ajio.com/medias/sys_master/root/20240425/DUtE/6629722d05ac7d77bb26f462/-473Wx593H-467277165-purple-MODEL.jpg"
+       width="500"
+        height="400">
+  </p>
   <h1>Buy Now</h1>
 
   <!-- Buy Now Button -->
