--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="product-grid">
   <div class="product-card">
-    <img class="prod-img" src="https://placekitten.com/800/600" alt="Cozy Kitten T-shirt">
+    <img class="prod-img" src="https://m.media-amazon.com/images/I/81C546M6YbL._AC_UL480_FMwebp_QL65_.jpg/800/600" alt="Cozy Kitten T-shirt">
     <h3 class="prod-title">Cozy Kitten T-shirt</h3>
     <p class="prod-price">$25</p>
     <button class="buy-btn" data-name="Cozy Kitten T-shirt" data-price="$25">Buy Now</button>
