Update product image source in index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="product-grid">
   <div class="product-card">
-    <img class="prod-img" src="https://m.media-amazon.com/images/I/81C546M6YbL._AC_UL480_FMwebp_QL65_.jpg/800/600" alt="Cozy Kitten T-shirt">
+    <img class="prod-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpantproject.com%2Fproducts%2Fplum-wine-power-stretch-cargo-pants%3Fsrsltid%3DAfmBOorh1cS03fIWOUWonJeFGTW6sHtXgnajgGs8NjySgmdPYD0MD46Q&psig=AOvVaw0zD1b2D00PzpysPuXuwGd2&ust=1762948706517000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCqlpKG6pADFQAAAAAdAAAAABAE" alt="Cozy Kitten T-shirt">
     <h3 class="prod-title">Cozy Kitten T-shirt</h3>
     <p class="prod-price">$25</p>
     <button class="buy-btn" data-name="Cozy Kitten T-shirt" data-price="$25">Buy Now</button>
