--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="product-card overlay">
-    <img class="prod-img" src="https://placekitten.com/801/600" alt="Cat Mug">
+    <img class="prod-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpantproject.com%2Fproducts%2Fplum-wine-power-stretch-cargo-pants%3Fsrsltid%3DAfmBOorh1cS03fIWOUWonJeFGTW6sHtXgnajgGs8NjySgmdPYD0MD46Q&psig=AOvVaw0zD1b2D00PzpysPuXuwGd2&ust=1762948706517000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCqlpKG6pADFQAAAAAdAAAAABAE/801/600" alt="Cat Mug">
     <div class="overlay-content">
       <h3>Cat Mug</h3>
       <p>$12</p>
