--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
       <button class="buy-btn" data-name="Cat Mug" data-price="$12">Buy Now</button>
     </div>
   </div>
+  <div class="product-grid">
   <img src="https://i.ebayimg.com/images/g/~jcAAeSwZatoexKw/s-l1600.webp"
         width="600"
         height="500">
+  </div>
 
   <!-- Add more cards similarly -->
 </div>
