--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
     </div>
   </div>
   <div class="product-grid">
+    <div class="product-card">
   <img src="https://i.ebayimg.com/images/g/~jcAAeSwZatoexKw/s-l1600.webp"
         width="400"
         height="300">
+      <p class="prod-price">Tsh1500</p>
   </div>
 
   <!-- Add more cards similarly -->
