--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         width="400"
         height="300">
       <p class="prod-price">Tsh1500</p>
+      <button class="buy-btn" data-price="Tsh1500">Buy Now</button>
+  </div>
   </div>
 
   <!-- Add more cards similarly -->
