--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <button class="buy-btn" data-name="Cat Mug" data-price="$12">Buy Now</button>
     </div>
   </div>
+  <p>
   <div class="product-grid">
     <div class="product-card">
   <img src="https://i.ebayimg.com/images/g/~jcAAeSwZatoexKw/s-l1600.webp"
@@ -58,7 +59,16 @@
       <button class="buy-btn" data-price="Tsh1500">Buy Now</button>
   </div>
   </div>
-
+  <div class="product-grid">
+    <div class="product-card">
+<img src="https://i.ebayimg.com/images/g/6GkAAOSwqaFmmhjc/s-l960.webp"
+     width="400"
+     height="300"
+  <p class="prod-price">Tsh20,000</p>
+  <button class="buy-btn" data-price="Tsh20,000">Buy Now</button>
+    </div>
+  </div>
+</p>
   <!-- Add more cards similarly -->
 </div>
 
