--- a/index.html
+++ b/index.html
@@ -1,134 +1,142 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Products — Buy Now (COD)</title>
-<style>
-  :root{--card-bg:#fff;--accent:#2f9d4a}
-  body{font-family:Arial,Helvetica,sans-serif;margin:24px;background:#f4f6f8}
-  .product-grid{display:grid;gap:18px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));max-width:1100px;margin:0 auto}
-  .product-card{background:var(--card-bg);border-radius:12px;box-shadow:0 6px 16px rgba(10,10,15,0.06);overflow:hidden;padding-bottom:12px;text-align:center}
-  .prod-img{width:100%;height:220px;object-fit:cover;display:block}
-  .prod-title{margin:12px 8px 4px;font-size:1.05rem}
-  .prod-price{margin:0;color:#666;font-weight:600}
-  .buy-btn{margin-top:10px;background:var(--accent);color:#fff;border:none;padding:10px 16px;border-radius:10px;cursor:pointer;font-weight:700}
-  .buy-btn:active{transform:translateY(1px)}
-  /* overlay variant */
-  .overlay{position:relative;padding:0}
-  .overlay .overlay-content{position:absolute;inset:0;display:flex;flex-direction:column;justify-content:flex-end;padding:12px;background:linear-gradient(180deg,transparent,rgba(0,0,0,0.45));color:#fff}
-  /* form modal (simple) */
-  .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.45);z-index:60}
-  .modal.open{display:flex}
-  .modal-card{background:#fff;border-radius:12px;padding:18px;width:100%;max-width:420px;box-shadow:0 10px 30px rgba(5,5,10,0.2)}
-  .modal-card h3{margin-top:0}
-  .modal-card input, .modal-card textarea{width:100%;padding:10px;margin:8px 0;border:1px solid #ddd;border-radius:8px;box-sizing:border-box}
-  .row{display:flex;gap:8px}
-  .small{flex:1}
-  .close{background:transparent;border:0;font-size:18px;cursor:pointer;position:absolute;right:18px;top:14px}
-  .submit-btn{background:var(--accent);color:#fff;padding:10px;border-radius:10px;border:0;width:100%;font-weight:700}
-</style>
+    <title>My Online Store</title>
+    <style>
+        body { font-family: Arial; margin:0; background:#f2f2f2; }
+        .search { padding:10px; background:white; position:sticky; top:0; }
+        .search input { width:100%; padding:12px; border-radius:6px; border:1px solid #ccc; }
+        .section-title { padding:10px; font-size:20px; font-weight:bold; }
+        .categories { display:flex; overflow-x:auto; padding:10px; }
+        .cat-box { min-width:150px; background:white; margin-right:10px; border-radius:10px; text-align:center; padding:10px; cursor:pointer; }
+        .cat-box img { width:120px; height:120px; object-fit:cover; border-radius:8px; }
+
+        .products { display:grid; grid-template-columns:repeat(2,1fr); gap:10px; padding:10px; }
+        .product-card { background:white; padding:10px; border-radius:10px; cursor:pointer; }
+        .product-card img { width:100%; height:150px; object-fit:cover; border-radius:8px; }
+        .buy-btn { width:100%; padding:10px; margin-top:10px; background:#ff9900; border:none; border-radius:6px; }
+
+        #productDetails { display:none; background:white; margin:10px; padding:15px; border-radius:10px; }
+        #productDetails img { width:100%; border-radius:10px; }
+    </style>
 </head>
 <body>
-
-<h1 style="text-align:center">Products</h1>
-
-<div class="product-grid">
-  <div class="product-card">
-    <img class="prod-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpantproject.com%2Fproducts%2Fplum-wine-power-stretch-cargo-pants%3Fsrsltid%3DAfmBOorh1cS03fIWOUWonJeFGTW6sHtXgnajgGs8NjySgmdPYD0MD46Q&psig=AOvVaw0zD1b2D00PzpysPuXuwGd2&ust=1762948706517000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCqlpKG6pADFQAAAAAdAAAAABAE" alt="Cozy Kitten T-shirt">
-    <h3 class="prod-title">Cozy Kitten T-shirt</h3>
-    <p class="prod-price">$25</p>
-    <button class="buy-btn" data-name="Cozy Kitten T-shirt" data-price="$25">Buy Now</button>
-  </div>
-
-  <div class="product-card overlay">
-    <img class="prod-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpantproject.com%2Fproducts%2Fplum-wine-power-stretch-cargo-pants%3Fsrsltid%3DAfmBOorh1cS03fIWOUWonJeFGTW6sHtXgnajgGs8NjySgmdPYD0MD46Q&psig=AOvVaw0zD1b2D00PzpysPuXuwGd2&ust=1762948706517000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOCqlpKG6pADFQAAAAAdAAAAABAE/801/600" alt="Cat Mug">
-    <div class="overlay-content">
-      <h3>Cat Mug</h3>
-      <p>$12</p>
-      <button class="buy-btn" data-name="Cat Mug" data-price="$12">Buy Now</button>
+    <div class="search">
+        <input type="text" id="searchInput" placeholder="Search products..." onkeyup="searchProducts()">
     </div>
-  </div>
-  <p>
-  <div class="product-grid">
-    <div class="product-card">
-  <img src="https://i.ebayimg.com/images/g/~jcAAeSwZatoexKw/s-l1600.webp"
-        width="400"
-        height="300">
-      <p class="prod-price">Tsh1500</p>
-      <button class="buy-btn" data-price="Tsh1500">Buy Now</button>
-  </div>
-  </div>
-  <div class="product-grid">
-    <div class="product-card">
-<img src="https://i.ebayimg.com/images/g/6GkAAOSwqaFmmhjc/s-l960.webp"
-     width="400"
-     height="300"
-  <p class="prod-price">Tsh20,000</p>
-  <button class="buy-btn" data-price="Tsh20,000">Buy Now</button>
-    </div>
-  </div>
-</p>
-  <!-- Add more cards similarly -->
-</div>
 
-<!-- Modal Cash-on-Delivery Form -->
-<div id="codModal" class="modal" aria-hidden="true">
-  <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="modalTitle">
-    <button class="close" id="closeModal" aria-label="Close">&times;</button>
-    <h3 id="modalTitle">Cash on Delivery</h3>
-    <p id="selectedProduct" style="color:#333;margin-top:0;margin-bottom:8px;font-weight:600"></p>
+    <h2 class="section-title">Categories</h2>
+    <div id="categorySection" class="categories"></div>
 
-    <form id="codForm" method="POST" action="https://formspree.io/f/YOUR_FORM_ID">
-      <!-- Product details filled by JS -->
-      <input type="hidden" name="product" id="formProduct">
-      <input type="hidden" name="price" id="formPrice">
-      <input type="text" name="name" placeholder="Full name" required>
-      <input type="text" name="address" placeholder="Delivery address" required>
-      <div class="row">
-        <input class="small" type="text" name="city" placeholder="City" required>
-        <input class="small" type="text" name="phone" placeholder="Phone" required>
-      </div>
-      <input type="hidden" name="payment_method" value="Cash on Delivery">
-      <!-- optional redirect: -->
-      <!-- <input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you.html"> -->
-      <button type="submit" class="submit-btn">Confirm Order</button>
-    </form>
-  </div>
-</div>
+    <h2 id="categoryTitle" class="section-title" style="display:none"></h2>
+    <div id="productSection" class="products"></div>
+
+    <div id="productDetails"></div>
+
+    <h2 class="section-title">Suggested For You</h2>
+    <div id="suggestSection" class="products"></div>
+
+    <h2 class="section-title">You May Also Like</h2>
+    <div id="likeSection" class="products"></div>
 
 <script>
-  // Open modal and populate product details
-  document.querySelectorAll('.buy-btn').forEach(btn=>{
-    btn.addEventListener('click', (e)=>{
-      const name = btn.getAttribute('data-name') || '';
-      const price = btn.getAttribute('data-price') || '';
-      document.getElementById('formProduct').value = name;
-      document.getElementById('formPrice').value = price;
-      document.getElementById('selectedProduct').textContent = name + ' — ' + price;
-      document.getElementById('codModal').classList.add('open');
-      document.getElementById('codModal').setAttribute('aria-hidden', 'false');
-      // focus first input for accessibility
-      document.querySelector('#codForm input[name="name"]').focus();
-    });
-  });
+const categories = [
+    {
+        name: "Phones",
+        img: "https://raw.githubusercontent.com/username/repo/main/phones.jpg",
+        items: [
+            {
+                name: "Samsung A14",
+                price: "$150",
+                desc: "Affordable smartphone with long battery.",
+                img: "https://raw.githubusercontent.com/username/repo/main/a14.jpg",
+                sizeChart: "https://raw.githubusercontent.com/username/repo/main/sizechart.jpg"
+            }
+        ]
+    },
 
-  // Close modal
-  document.getElementById('closeModal').addEventListener('click', ()=>{
-    document.getElementById('codModal').classList.remove('open');
-    document.getElementById('codModal').setAttribute('aria-hidden', 'true');
-  });
-
-  // Close when clicking outside modal-card
-  document.getElementById('codModal').addEventListener('click', (e)=>{
-    if(e.target === document.getElementById('codModal')){
-      document.getElementById('codModal').classList.remove('open');
-      document.getElementById('codModal').setAttribute('aria-hidden', 'true');
+    {
+        name: "Fashion",
+        img: "https://raw.githubusercontent.com/username/repo/main/fashion.jpg",
+        items: [
+            {
+                name: "Men T-shirt",
+                price: "$12",
+                desc: "Premium cotton T-shirt.",
+                img: "https://raw.githubusercontent.com/username/repo/main/tshirt.jpg",
+                sizeChart: "https://raw.githubusercontent.com/username/repo/main/sizechart.jpg"
+            }
+        ]
     }
-  });
+];
 
-  // Optional: after successful submit, Formspree will redirect (if you set _redirect). Otherwise user sees thank-you page from Formspree.
+function loadCategories() {
+    const box = document.getElementById("categorySection");
+    categories.forEach((c, index) => {
+        box.innerHTML += `
+            <div class='cat-box' onclick='showProducts(${index})'>
+                <img src='${c.img}'>
+                <p>${c.name}</p>
+            </div>`;
+    });
+}
+loadCategories();
+
+function showProducts(i) {
+    const cat = categories[i];
+    document.getElementById("categoryTitle").style.display = "block";
+    document.getElementById("categoryTitle").innerText = cat.name;
+
+    const list = document.getElementById("productSection");
+    list.innerHTML = "";
+
+    cat.items.forEach((p, index) => {
+        list.innerHTML += `
+            <div class='product-card' onclick='openDetails(${i}, ${index})'>
+                <img src='${p.img}'>
+                <h3>${p.name}</h3>
+                <p>${p.price}</p>
+                <button class='buy-btn'>Buy Now</button>
+            </div>`;
+    });
+}
+
+function openDetails(catIndex, productIndex) {
+    const p = categories[catIndex].items[productIndex];
+
+    const box = document.getElementById("productDetails");
+    box.style.display = "block";
+
+    box.innerHTML = `
+        <img src='${p.img}'>
+        <h2>${p.name}</h2>
+        <p>${p.price}</p>
+        <p>${p.desc}</p>
+
+        <h3>Size Chart</h3>
+        <img src='${p.sizeChart}'>
+
+        <button class='buy-btn' onclick="openCOD('${p.name}')">Buy Now</button>
+    `;
+}
+
+function openCOD(productName) {
+    window.location.href = https://formspree.io/f/YOUR_FORM_ID?product=${productName};
+}
+
+// Suggested + You May Also Like
+
+document.getElementById("suggestSection").innerHTML = `
+    <div class='product-card'>
+        <img src='https://raw.githubusercontent.com/username/repo/main/suggest1.jpg'>
+        <p>Recommended Item</p>
+    </div>`;
+
+document.getElementById("likeSection").innerHTML = `
+    <div class='product-card'>
+        <img src='https://raw.githubusercontent.com/username/repo/main/like1.jpg'>
+        <p>You may also like</p>
+    </div>`;
 </script>
-
 </body>
 </html>
