--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <script>
         const productData = {
             fashion: [
-                { name: "Men Shirt", img: "https://via.placeholder.com/250", price: "$20", size: "https://via.placeholder.com/300x150" },
+                { name: "Men Shirt", img: "https://raw.githubusercontent.com/jafarotto-001/jafar-otto.com/refs/heads/main/ear1.jpg/250", price: "$20", size: "https://via.placeholder.com/300x150" },
                 { name: "Ladies Dress", img: "https://via.placeholder.com/250", price: "$35", size: "https://via.placeholder.com/300x150" }
             ],
             electronics: [
