--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>Categories</h2>
         <div class="category-container" id="categoryContainer">
             <div class="category-item" onclick="showProducts('fashion')">
-                <img src="https://via.placeholder.com/300x200" />
+                <img src="https://raw.githubusercontent.com/jafarotto-001/jafar-otto.com/refs/heads/main/fash2.jpg/300x200" />
                 <p>Fashion</p>
             </div>
             <div class="category-item" onclick="showProducts('electronics')">
