--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>Fashion</p>
             </div>
             <div class="category-item" onclick="showProducts('electronics')">
-                <img src="https://via.placeholder.com/300x200" />
+                <img src="https://i.imgur.com/c5qFbkx.jpeg/300x200" />
                 <p>Electronics</p>
             </div>
             <div class="category-item" onclick="showProducts('shoes')">
