--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </div>
             <div class="category-item" onclick="showProducts('electronics')">
                 <img src="https://i.imgur.com/c5qFbkx.jpeg/300x200" />
+                <img src="https://i.imgur.com/SSjQmuQ.jpeg/300/200" />
                 <p>Electronics</p>
             </div>
             <div class="category-item" onclick="showProducts('shoes')">
