--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         <h2>Categories</h2>
         <div class="category-container" id="categoryContainer">
             <div class="category-item" onclick="showProducts('fashion')">
-                <img src="https://raw.githubusercontent.com/jafarotto-001/jafar-otto.com/refs/heads/main/fash2.jpg/300x200" />
+                <img src="https://i.imgur.com/MJZ2l9L.jpeg/300x200" />
                 <p>Fashion</p>
             </div>
             <div class="category-item" onclick="showProducts('electronics')">
-                <img src="https://i.imgur.com/c5qFbkx.jpeg/300x200" />
                 <img src="https://i.imgur.com/SSjQmuQ.jpeg/300/200" />
                 <p>Electronics</p>
             </div>
