--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
     <section class="suggested">
         <h2>Suggested For You</h2>
         <div class="category-container">
-            <div class="category-item"><img src="https://i.imgur.com/wI7U5GV.jpeg/200" /><p>Item A</p></div>
+            <div class="category-item"><img src="https://i.imgur.com/wI7U5GV.jpeg/200" /><p>Item A</p>
+            <p>
+                <button class="buy-btn" data-name="Trouser pants" data-price="Tsh30,000">Buy Now</button>
+            </p>
+            </div>
             <div class="category-item"><img src="https://via.placeholder.com/200" /><p>Item B</p></div>
         </div>
     </section>
