--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </p>
             </div>
             <div class="category-item"><img src="https://via.placeholder.com/200" /><p>Item B</p></div>
+            { name: "Men Shirts", img: "https://i.imgur.com/wI7U5GV.jpeg/250", price: "Tsh2200"}
         </div>
     </section>
 
