--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <h2>Categories</h2>
         <div class="category-container" id="categoryContainer">
             <div class="category-item" onclick="showProducts('fashion')">
-                <img src="https://i.imgur.com/MJZ2l9L.jpeg/300x200" />
+                <img src="https://via.placeholder.com/300x200" />
                 <p>Fashion</p>
             </div>
             <div class="category-item" onclick="showProducts('electronics')">
-                <img src="https://i.imgur.com/SSjQmuQ.jpeg/300/200" />
+                <img src="https://via.placeholder.com/300x200" />
                 <p>Electronics</p>
             </div>
             <div class="category-item" onclick="showProducts('shoes')">
@@ -61,13 +61,8 @@
     <section class="suggested">
         <h2>Suggested For You</h2>
         <div class="category-container">
-            <div class="category-item"><img src="https://i.imgur.com/wI7U5GV.jpeg/200" /><p>Item A</p>
-            <p>
-                <button class="buy-btn" data-name="Trouser pants" data-price="Tsh30,000">Buy Now</button>
-            </p>
-            </div>
+            <div class="category-item"><img src="https://via.placeholder.com/200" /><p>Item A</p></div>
             <div class="category-item"><img src="https://via.placeholder.com/200" /><p>Item B</p></div>
-            { name: "Men Shirts", img: "https://i.imgur.com/wI7U5GV.jpeg/250", price: "Tsh2200"}
         </div>
     </section>
 
@@ -95,7 +90,7 @@
     <script>
         const productData = {
             fashion: [
-                { name: "Men Shirt", img: "https://raw.githubusercontent.com/jafarotto-001/jafar-otto.com/refs/heads/main/ear1.jpg/250", price: "$20", size: "https://via.placeholder.com/300x150" },
+                { name: "Men Shirt", img: "https://via.placeholder.com/250", price: "$20", size: "https://via.placeholder.com/300x150" },
                 { name: "Ladies Dress", img: "https://via.placeholder.com/250", price: "$35", size: "https://via.placeholder.com/300x150" }
             ],
             electronics: [
